<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/fragment_title_statistic"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/fragment_title_Configurator" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/fragment_title_Training" />
    </group>

    <item tools:ignore="MenuTitle">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/drawer_subitem_settings" />
                <item
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/drawer_subitem_aboutus" />
                <item
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/drawer_subitem_feedback" />
                <item
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/drawer_subitem_close" />
            </group>
        </menu>
    </item>
</menu>